# penumbraGUI

./: CONTRIBUTING.md  Cargo.toml  README.md
core/: Cargo.toml
core/src/: device.rs  error.rs
core/src/connection/backend/: usb_backend.rs
core/src/core/: chip.rs  devinfo.rs
core/src/core/storage/: emmc.rs  mod.rs  ufs.rs
core/src/da/xflash/: da_protocol.rs  exts.rs  flash.rs  xflash_lib.rs
core/src/da/xml/: da_protocol.rs  exts.rs  xml_lib.rs
core/src/exploit/: heapbait.rs
core/src/utilities/analysis/: mod.rs  thumb.rs
gui/: Cargo.toml  README-linux.md  build.rs
gui/res/linux/: 51-mtk-penumbra.rules  install.sh  penumbra-gui.desktop
gui/src/: app.rs  error_format.rs  log_bridge.rs  main.rs  messages.rs  scatter.rs  theme.rs  worker.rs
packaging/arch/: PKGBUILD
packaging/arch-bin/: PKGBUILD
scripts/drivers/: installer.nsi
tui/: Cargo.toml
tui/src/cli/: common.rs  macros.rs  mod.rs  state.rs
tui/src/cli/commands/: download.rs  erase.rs  format.rs  peek.rs  pgpt.rs  readall.rs  readflash.rs  reboot.rs  seccfg.rs  shutdown.rs  upload.rs  writeflash.rs  xflash.rs
tui/src/cli/commands/device/: mod.rs  readoffset.rs  writeoffset.rs
tui/src/cli/helpers/: logging.rs  mod.rs
