[package]
name = "penumbra-gui"
version = "1.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = ["Shomy", "Penumbra Contributors"]
description = "A modern graphical interface for Penumbra, for flashing and managing MediaTek devices on Windows, Linux, and macOS."

[dependencies]
penumbra = { path = "../core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui_extras = "0.29"
rfd = "0.15"
log = "0.4"
anyhow = "1"
human_bytes = "0.4"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "penumbra-gui"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.30"
